bug with z-index of edges

--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,7 @@ html, body {
   left: 0px;
   top: 0px;
   position: absolute;
+  z-index: 5;
 }
 
 .edge {
